[package]
name = "ractor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.9", features = ["full"] }
utils-soeur = "0.1"
num_cpus = "1.13.0"
crossfire = "0.1.5"
futures = "0.3.16"
async-trait = "0.1.51"
once_cell = "1.8.0"

[features]
specialization = []
