[package]
name = "ractor-rpc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rustls = { version = "0.19.1", features = ["quic"] }
#quinn = "0.7.2"
#rcgen = "0.8.11"

thiserror = "1.0.26"
tokio-tungstenite = "0.15.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3.16"
crossfire = "0.1.5"
url = "2.2.2"
serde = { version = "1.0.127", features = ["derive"] }
bincode = "1.3.3"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
ahash = { version = "0.7.4", features = ["compile-time-rng"] }
log = "0.4.14"
