cargo-features = ["edition2021"]

[package]
name = "ractor"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ractor-derive = { version = "0.1", optional = true }

tokio = { version = "1.9", features = ["full"], optional = true }

crossfire = "0.1.5"
futures = "0.3.16"
async-trait = "0.1.51"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.9", features = ["full"] }
http = "0.2.4"
hyper = { version = "0.14.11", features = ["full"] }
snmalloc-rs = { version = "0.2.27", features = ["native-cpu", "cache-friendly"] }

[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
pprof = { version = "0.5.0", features = ["flamegraph"] }

[features]
default = ["derive", "use_tokio"]
derive = ["ractor-derive"]
use_tokio = ["tokio"]

[[bench]]
name = "fib"
